# polypm

./: .clippy.toml  .gitignore  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  check_express_deps.rs  install.ps1  install.sh  rustfmt.toml  test_express_full.rs  test_iconv_deps.rs  test_install.ps1  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md  feature_request.md  security_vulnerability.md
.github/workflows/: release.yml
examples/: README.md
examples/data-science/: README.md  project.toml
examples/fullstack-webapp/: README.md  project.toml
src/: lib.rs  main.rs
src/cli/: add.rs  init.rs  install.rs  mod.rs  run.rs  venv.rs
src/lib/: fs_utils.rs  mod.rs
src/models/: dependency.rs  ecosystem.rs  global_store.rs  lock_file.rs  mod.rs  package.rs  project.rs  resolved_dependency.rs  symlink_structure.rs  virtual_environment.rs
src/services/: dependency_resolver.rs  global_store_manager.rs  mod.rs  npm_client.rs  package_installer.rs  pypi_client.rs  symlink_manager.rs  virtual_environment_manager.rs
src/utils/: config.rs  error.rs  lock_file.rs  mod.rs  validation.rs
src/utils_ext/: error.rs  mod.rs  performance.rs  version.rs
tests/: contract_tests.rs  integration_tests.rs  test_cli_init.rs  unit_tests.rs
tests/contract/: mod.rs  test_cli_add.rs  test_cli_init.rs  test_cli_install.rs  test_cli_run.rs  test_cli_venv.rs
tests/integration/: test_dependency_management.rs  test_existing_project_install.rs  test_new_project_setup.rs  test_npm_integration.rs  test_offline_development.rs  test_package_installer.rs  test_pypi_integration.rs  test_script_execution.rs  test_symlink_manager.rs  test_virtual_environment_manager.rs
tests/unit/: mod.rs  test_clients.rs  test_models.rs  test_resolver.rs
