[package]
name = "ppm"
version = "1.0.0"
edition = "2021"
authors = ["VesperAkshay <your-email@example.com>"]
description = "A unified package manager for JavaScript and Python projects"
license = "MIT"
repository = "https://github.com/VesperAkshay/polypm"
homepage = "https://github.com/VesperAkshay/polypm"
documentation = "https://github.com/VesperAkshay/polypm#readme"
keywords = ["package-manager", "javascript", "python", "polyglot", "dependencies"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "ppm"
path = "src/main.rs"

[dependencies]
# CLI framework with derive support
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for registry APIs
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# Async utilities for stream processing
futures-util = "0.3"

# Cryptographic hashing for content addressing
sha2 = "0.10"

# Base64 encoding/decoding for integrity verification
base64 = "0.21"

# Cross-platform symlink support
symlink = "0.1"

# Archive extraction for npm packages
flate2 = "1.0"
tar = "0.4"

# Regular expressions for validation
regex = "1.10"

# File system utilities
tempfile = "3.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
# Testing framework
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
mockito = "1.2"
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
# Allow unused dependencies during setup phase
unused_crate_dependencies = "allow"

[lints.clippy]
# Pedantic lints for high code quality (lower priority to allow overrides)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that can be noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Performance lints (lower priority)
perf = { level = "warn", priority = -1 }
# Style consistency (lower priority)
style = { level = "warn", priority = -1 }

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
